--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -53,7 +53,7 @@
 	--card-foreground: hsl(0 0% 90%);
 	--popover: hsl(0 0% 15%);
 	--popover-foreground: hsl(0 0% 90%);
-	--primary: hsl(210 100% 70%);
+	--primary: hsl(210, 56%, 49%);
 	--primary-foreground: hsl(0 0% 90%);
 	--secondary: hsl(48 100% 70%);
 	--secondary-foreground: hsl(0 0% 90%);
